feat: 测试路由及ejs模板

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,5 +7,14 @@
   <body>
     <h1><%= title %></h1>
     <p>EJS Welcome to <%= title %></p>
+    <p><%= message %></p>
+    <hr />
+    <%- include('widgets/user-info', {
+      isMe
+    }) %>
+    <hr />
+    <%- include('widgets/blog-list', {
+      blogList
+    }) %> 
   </body>
 </html>
